timeline-element,track,framepositionner: don't leak internal object

https://bugzilla.gnome.org/show_bug.cgi?id=755247