ges/ges-timeline-element.c
@@ -247,6 +247,9 @@ ges_timeline_element_dispose (GObject * object)
 {
   GESTimelineElement *self = GES_TIMELINE_ELEMENT (object);
 
+  if (self->priv->children_props)
+    g_hash_table_unref (self->priv->children_props);
+
   g_clear_object (&self->priv->copied_from);
 }
 
